css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    background-color: rgb(20, 25, 34);
    color: #959595;

}
a {
    text-decoration: none;
    color: inherit;
}
.fluid-h {
    height: 100vh;
}

.fl {
    float: left;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

/* ASIDE-MENU  */
main .aside-menu {
    background-color: black;
    padding: 20px 0 0;
    color: #959595;
    font-size: 13px;
    display: flex;
    flex-direction: column;
    height: calc(100vh - 90px);
    justify-content: space-between; /* useful in xs  */
}

.aside-menu ul li, 
.aside-bottom {
    padding: 5px;
    justify-content: center;
}



/* ASIDE logo  */
#logo {
    width: 130px;
    margin: 10px 0;
}

.aside-logo {
    display: none;
}

.aside-logo, .aside-logo-xs {
    flex-basis: auto;
    flex-shrink: 0;
}
.aside-logo li:nth-child(2) {
    border-left: 3px solid greenyellow;
}
.aside-logo li:nth-child(2) a {
    color: white;
}

.aside-logo svg, 
.aside-logo-xs svg {
    width: 25px;
}

.aside-logo svg path, 
.aside-logo-xs svg path {
    fill: #959595;
}

.aside-menu .aside-logo li:hover svg path {
    fill: white;
}

.aside-logo li, 
.aside-logo-xs li {
    display: flex;
    align-items: center;   
}

.aside-menu li:hover {
    color: white;
}

/* ASIDE playlist */
.aside-playlist{
    flex-basis: auto;
    flex-shrink: 1;
    flex-grow: 1;
    overflow: auto;
    min-height: 150px;
    display: none;
}

.aside-playlist h3 {
    padding: 20px 0 10px;
    color: white;
}

.aside-menu .aside-playlist li {
    padding: 10px 10px;
}

.fa-plus {
    font-size: 1.2em;
    color: black;
    background-color: gray;
    padding: 10px;
    margin-right: 5px;
}

.aside-playlist li:nth-child(2):hover i {
    background-color: white; 
}
/* ASIDE bottom  */
.aside-bottom {
    flex-basis: auto;
    flex-shrink: 0;
}

.aside-bottom img {
    color: #959595;
    width: 25px;
}
.profile {
    padding: 5px 0;
    display: flex;
    align-items: center;
    justify-content: center;
}
#profile {
    background-color: grey;
    border-radius: 50%;
    width: 30px;
}
#profile + span {
    font-size: 15px;
    color: white;
}
hr {
    display: none;
}
.aside-bottom span {
    display: none;
}
.aside-bottom .profile:hover {
    color: white;
}

/* CONTENT  */
.content {
    color: white;
    overflow-y: scroll;
    height: calc(100vh - 90px);
}

/* TOP-NAV  */
.top-nav {
    height: 90px;
    width: 100%;
    position: fixed;
    top: 0; 
    z-index: 1002;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
}

.button {
    font-size: 13px;
    border: 1px solid white;
    padding: 10px 35px;
    border-radius: 30px; 
    margin-right: 30px;
}

.button:hover {
    transform: scale(1.1, 1.1);
}

/* SUB-NAV  */
.sub-nav {
    margin-top: 90px;
    display: flex;
}
.sub-nav ul {
    list-style-type: none;
    width: 100%;
    justify-content: center;
}
.sub-nav ul li {
    padding: 20px;
    font-size: 13px;
    color: #959595;
}
.sub-nav ul li:hover {
    color: white;
}

.sub-nav li:first-child {
    position: relative;
}
.green-row {
    position: absolute;
    height: 2px;
    width: 30%;
    background-color: greenyellow;
    left: 35%;
    margin-top: 3px;
}

/* CONTENT Playlist  */
.container-playlist {
    padding: 20px 15px;
}

.container-playlist h2 {
    padding: 10px 5px;
}

.single {
    margin-top: 20px;
    width: calc(100% / 2 - 15px);
    text-align: center;
    margin-right: 15px;
}

.img-container {
    position: relative;
}

.img-container img {
    width: 100%;
}

.container-playlist:last-child img{
    border-radius: 50%;
}

.container-playlist span {
    
    font-size: 12px;
    color: #959595;
}
.single h4 {
    padding: 15px 0;
}
.img-container .fa-play-circle {
    color: white;
    position: absolute;
    display: none;
    transform: translate(-50%, -50%);
    top:50%;
    left:50%;
}

.single:hover img {
    filter: opacity(50%);
}

.single:hover .fa-play-circle {
    display: block;
    font-size: 50px;
}

/* footer  */
footer {
    height: 90px;
    background-color: #404040;
    position: fixed;
    bottom: 0;    
    width: 100%;
    z-index: 1001;
    color: white;
}

footer.row {
    align-items: center;
}

footer ul {
    display: flex;
    list-style-type: none;
    align-items: center;
    justify-content: center;
}
/* first ul footer  */
.info-played {
    display: flex;
}

footer img {
    width: 30px;
    margin: 5px;   
}

.info-played h4 {
    font-size: 14px;
    line-height: 5px;
}

.info-played span {
    font-size: 11px;
    color: #959595;
}

.info-played span:hover {
    text-decoration: underline;
    color: white;
}

.info-played ul.icons{
    flex-grow: 1;
    display: flex;
    flex-basis: auto;
    flex-direction: column;
}

ul.icons li {
    padding: 0 5px;
    color: #959595;
}
ul.icons li:hover i {
    color: white;
}

/* second ul footer  */
.playing i, .options i {
    padding: 0 2px;
}

.fa-play-circle {
    font-size: 1.5em;
}
.playing ul:first-child {
    padding-bottom: 10px;
}

.playing ul:last-child li:not(li:nth-child(2)) {
    font-size: 11px;
}
.playing ul:last-child li:nth-child(2), 
.options ul li:last-child {
    flex-grow: 1;
    padding: 0 10px;
}

div.bar {
    width: 100%;
    height: 4px;
    background-color: #959595;
    border-radius: 5px;   
    display: flex;
    align-items: center;
    margin-right: 10px;
}

div.bar-2 {
    width: 30%;
    height: 4px;
    background-color: white;
    border-radius: 5px;
    text-align: center;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}
.bar i.fa-circle {
    display: none;
    padding: 0;
}
.bar:hover .bar-2 {
    background-color: greenyellow;
}
.bar:hover i.fa-circle {
    display: block;
}

.playing i.fa-play-circle:hover {
    transform: scale(1.1, 1.1);
}
.options i {
    font-size: 0.8em;
}

@media only screen and (min-width: 576px) {
    .aside-logo{
        display:block;
    }
    .aside-logo-xs {
        display: none;
    }

    .aside-menu ul li, 
    .aside-bottom {
    padding: 5px 10px;
    justify-content: flex-start;
    }
    .aside-bottom img {
        width: 20px; 
    }
    .aside-bottom img {
        margin-right: 5px;
    }
    .profile {
        justify-content: flex-start;
        padding: 10px 0;
    }
    
    .info-played ul.icons{
        justify-content: flex-end;
        flex-direction: row;
    }

    .playing i, .options i {
        padding: 0 5px;
    }
    .aside-playlist{ 
        display: block; 
    }

    .aside-bottom span {
        display: block;
    }
    hr {
        display: block;
    }   
    footer img {
        width: 40px;
        margin: 10px;
    }
    .fa-play-circle {
        font-size: 2em;
    }
}

@media only screen and (min-width: 768px) {
    .single {
        width: calc(100% / 4 - 15px);
    }
    .container-playlist .container-fluid:nth-child(2) .single {
        height: 310px;
    }
}

@media only screen and (min-width: 992px) {
    .single {
        width: calc(100% / 6 - 15px);
    }
    .container-playlist .container-fluid:nth-child(2) .single {
            height: auto;
    }
}

